--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /out-tsc
 
 # dependencies
-/node_modules
+node_modules
 
 # IDEs and editors
 /.idea
@@ -43,3 +43,5 @@ yarn-error.log
 Thumbs.db
 build/
 dist/
+
+functions/node_modules
