--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 vm_settings: &vm_settings
   working_directory: ~/app
   docker:
-    - image: circleci/node:latest
+    - image: circleci/node:10.9.0
 
 version: 2
 jobs:
