--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
+  },
+  "resolutions": {
+    "grpc": "^1.11.0"
   }
 }
