--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,7 @@ jobs:
 
       - run: yarn run lint
 
-      - run: export CHROME_BIN=/usr/bin/chromium-browser
-
-      - run: yarn run test
+      - run: yarn test
 
 workflows:
   version: 2
