--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@fakesamgregory/underscore-helpers": "0.0.1",
-    "angularfire2": "^5.0.0-rc.3",
+    "angularfire2": "5.0.0-rc.3",
     "angulartics2": "^2.5.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
