--- a/functions/package.json
+++ b/functions/package.json
@@ -7,5 +7,8 @@
     "nodemailer": "^4.3.1",
     "nodemailer-mailgun-transport": "^1.3.6"
   },
+  "resolutions": {
+    "grpc": "^1.14.1"
+  },
   "private": true
 }
