--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - checkout
 
-      - add_ssh_keys
+      - add_ssh_keys:
+          fingerprints:
+            - "09:06:34:05:ce:4d:64:e9:43:6f:a0:9e:17:66:e8:20"
 
       - restore_cache:
           keys:
