--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
+            - ~/.ssh
           key: v3-dependencies-{{ checksum "package.json" }}
 
       - run: yarn run build
