--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@fakesamgregory/underscore-helpers": "0.0.1",
+    "angularfire2": "5.0.0-rc.3",
     "angulartics2": "^2.5.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "firebase": "^4.7.0",
+    "ng-recaptcha": "^3.0.2",
+    "nodemailer": "^4.3.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
@@ -38,15 +43,19 @@
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
+    "puppeteer": "^1.7.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
+  },
+  "resolutions": {
+    "grpc": "^1.11.0"
   }
 }
