--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,10 +89,16 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test
+      - test:
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
       - build:
           requires:
             - test
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
       - deploy_prod:
           requires:
             - build
