--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -H 0.0.0.0",
-    "build": "ng build --ssl ",
+    "build": "ng build",
     "test": "ng test -sm=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
