--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fakesamgregory/underscore-helpers": "0.0.1",
     "angularfire2": "5.0.0-rc.3",
     "angulartics2": "^2.5.0",
+    "aos": "^2.3.3",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^4.7.0",
