--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,7 @@ jobs:
 
       - run:
           name: AWS Sync
-          command: |
-            aws --region eu-west-1 s3 sync ./dist s3://jupiterandthegiraffe.com/ --acl public-read --exact-timestamps --delete || return 1
-            curl -X POST "https://api.cloudflare.com/client/v4/zones/bc340fdaafad906e7e66a5245a25e334/purge_cache" \
-              -H "X-Auth-Email: samuelgregory@me.com" \
-              -H "X-Auth-Key: $CLOUDFLARE_API_KEY" \
-              -H "Content-Type: application/json" \
-              --data '{"purge_everything":true}'
+          command: aws --region eu-west-1 s3 sync ./dist s3://jupiterandthegiraffe.com/ --acl public-read --exact-timestamps --delete || return 1
             
 
 
