--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,18 +46,18 @@ jobs:
 
       - restore_cache:
           keys:
-            - v5-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
-            - v5-dependencies-
+            - v1-dependencies-
 
-      - run: yarn install
+      - run: npm install
 
       - save_cache:
           paths:
             - node_modules
-          key: v5-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn run build
+      - run: npm run build
 
       - persist_to_workspace:
           root: dist
@@ -71,20 +71,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v5-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
-            - v5-dependencies-
+            - v1-dependencies-
 
-      - run: yarn install
+      - run: npm install
 
       - save_cache:
           paths:
             - node_modules
-          key: v5-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn run lint
+      - run: npm run lint
 
-      - run: yarn test
+      - run: npm test
 
 workflows:
   version: 2
