--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@fakesamgregory/underscore-helpers": "0.0.1",
+    "@ng-toolkit/universal": "^1.1.41-beta.110",
     "angularfire2": "^5.0.2",
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
@@ -43,19 +44,19 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "jasmine-core": "^3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
     "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
     "puppeteer": "^1.7.0",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
+    "tslint": "^5.11.0",
     "typescript": "2.9.2"
   },
   "resolutions": {
