--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,27 +90,71 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test:
+      - test
           filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
+            ignore: master
+
       - build:
           requires:
             - test
           filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
-      - deploy_prod:
-          requires:
-            - build
+            ignore: master
+
+  build_and_deploy_dev:
+    jobs:
+      - test:
           filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
             branches:
-              ignore: /.*/
+              only: master
+
+      - build:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
+
       - deploy_dev:
           requires:
             - build
           filters:
             branches:
               only: master
+
+  build_and_deploy_prod:
+      jobs:
+        - test:
+            filters:
+              tags:
+                only: /[0-9]+(\.[0-9]+)*/
+              branches:
+                ignore: /.*/
+
+        - build:
+            requires:
+              - test
+            filters:
+              tags:
+                only: /[0-9]+(\.[0-9]+)*/
+              branches:
+                ignore: /.*/
+        - hold:
+            requires:
+              - build
+            type:
+              - approval
+            filters:
+              tags:
+                only: /[0-9]+(\.[0-9]+)*/
+              branches:
+                ignore: /.*/
+
+        - deploy_prod:
+            requires:
+              - build
+            filters:
+              tags:
+                only: /[0-9]+(\.[0-9]+)*/
+              branches:
+                ignore: /.*/
+
