--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,13 +92,15 @@ workflows:
     jobs:
       - test
           filters:
-            ignore: master
+            branches:
+              ignore: master
 
       - build:
           requires:
             - test
           filters:
-            ignore: master
+            branches:
+              ignore: master
 
   build_and_deploy_dev:
     jobs:
