--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,17 +90,11 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test:
-          filters:
-            branches:
-              ignore: master
+      - test
 
       - build:
           requires:
             - test
-          filters:
-            branches:
-              ignore: master
 
   build_and_deploy_dev:
     jobs:
