--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,11 @@
-{}
+{
+  "hosting": {
+    "public": "functions/dist",
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "http"
+      }
+    ]
+  }
+}
