--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "build": "ng build --prod",
     "test": "ng test -sm=false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:server:prod": "ng run jupiter-and-the-giraffe:server && webpack --config webpack.server.config.js --progress --colors",
+    "build:browser:prod": "ng build --prod",
+    "build:prod": "npm run build:browser:prod && npm run build:server:prod",
+    "server": "node local.js",
+    "build:prod:deploy": "npm run build:prod && npm run deploy",
+    "build:browser:serverless": "ng build --prod --base-href /production/",
+    "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
+    "build:serverless:deploy": "npm run build:serverless && npm run deploy",
+    "deploy": "serverless deploy",
+    "build:server:serverless": "ng run jupiter-and-the-giraffe:server:serverless && webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -18,22 +28,28 @@
     "@angular/core": "^6.1.10",
     "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/platform-server": "^6.1.10",
+    "@angular/platform-server": "^6.0.0",
     "@angular/router": "^6.1.10",
-    "@fakesamgregory/underscore-helpers": "0.0.1",
+    "@ng-toolkit/serverless": "^1.1.41",
     "@ng-toolkit/universal": "^1.1.41-beta.110",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "angularfire2": "^5.0.2",
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
+    "aws-serverless-express": "^3.2.0",
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "^4.5.0",
     "core-js": "^2.4.1",
+    "cors": "~2.8.4",
+    "cp-cli": "^1.1.0",
     "firebase": "^5.5.4",
     "grpc": "^1.15.1",
     "ng-recaptcha": "^4.0.0",
     "rxjs": "^6.3.3",
+    "ts-loader": "4.2.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -53,11 +69,18 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
     "node-sass": "^4.5.3",
-    "protractor": "~5.1.2",
+    "opencollective": "^1.0.3",
+    "protractor": "^5.4.1",
     "puppeteer": "^1.7.0",
+    "serverless": "1.26.1",
+    "serverless-apigw-binary": "^0.4.4",
+    "ts-loader": "4.2.0",
     "ts-node": "~3.0.4",
     "tslint": "^5.11.0",
-    "typescript": "2.9.2"
+    "typescript": "2.9.2",
+    "webpack": "^4.20.2",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "resolutions": {
     "grpc": "^1.11.0"
