--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "ng test -sm=false",
-    "lint": "ng lint",
+    "test": "ng run jupiter-and-the-giraffe-e2e:e2e",
+    "lint": "ng jupiter-and-the-giraffe-e2e:lint",
     "e2e": "ng e2e",
     "server": "node local.js",
     "build:browser:serverless": "ng build --prod --base-href /production/",
