--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,11 +85,17 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test
+      - test:
+          filters:
+            branches:
+              ignore: master
 
       - build:
           requires:
             - test
+          filters:
+            branches:
+              ignore: master
 
   build_and_deploy_dev:
     jobs:
