--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "ng run jupiter-and-the-giraffe-e2e:e2e",
+    "test": "ng test --single-run",
     "lint": "ng jupiter-and-the-giraffe-e2e:lint",
     "e2e": "ng e2e",
     "server": "node local.js",
@@ -53,8 +53,8 @@
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasmine": "^2.5.54",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~6.0.60",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
@@ -71,7 +71,7 @@
     "serverless": "1.26.1",
     "serverless-apigw-binary": "^0.4.4",
     "ts-loader": "4.2.0",
-    "ts-node": "~3.0.4",
+    "ts-node": "^3.0.6",
     "tslint": "^5.11.0",
     "typescript": "2.9.2",
     "webpack": "^4.20.2",
