--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cp-cli": "^1.1.0",
     "firebase": "^5.5.4",
     "grpc": "^1.15.1",
+    "jasmine": "^3.2.0",
     "ng-recaptcha": "^4.0.0",
     "rxjs": "^6.3.3",
     "ts-loader": "4.2.0",
@@ -53,9 +54,9 @@
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
-    "@types/jasmine": "^2.5.54",
+    "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.14.0",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^3.0.0",
@@ -67,13 +68,13 @@
     "node-sass": "^4.5.3",
     "opencollective": "^1.0.3",
     "protractor": "^5.4.1",
-    "puppeteer": "^1.7.0",
-    "serverless": "1.26.1",
+    "puppeteer": "^1.9.0",
+    "serverless": "^1.32.0",
     "serverless-apigw-binary": "^0.4.4",
     "ts-loader": "4.2.0",
     "ts-node": "^3.0.6",
     "tslint": "^5.11.0",
-    "typescript": "2.9.2",
+    "typescript": "^2.9.2",
     "webpack": "^4.20.2",
     "webpack-cli": "2.1.2",
     "webpack-dev-server": "^3.1.9"
