--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,17 +85,11 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test:
-          filters:
-            branches:
-              only: /.*/
+      - test
 
       - build:
           requires:
             - test
-          filters:
-            branches:
-              only: /.*/
 
   build_and_deploy_dev:
     jobs:
