--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "ng test --single-run",
+    "test": "ng test",
     "lint": "ng jupiter-and-the-giraffe-e2e:lint",
     "e2e": "ng e2e",
     "server": "node local.js",
