--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,9 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: npm install
+      - run: |
+        npm install angular-cli -g
+        npm install
 
       - save_cache:
           paths:
