--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            npm install angular-cli -g
+            sudo npm install angular-cli -g
             sudo npm install
 
       - save_cache:
