--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,20 @@ jobs:
     steps:
       - checkout
 
-      - attach_workspace:
-          at: ~/app/
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          name: Install dependencies
+          command: sudo npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: npm run build:browser:serverless
 
@@ -75,11 +87,6 @@ jobs:
       - run: npm run lint
 
       - run: npm test
-
-      - persist_to_workspace:
-          root: node_modules
-          paths:
-            - .
 
 workflows:
   version: 2
