--- a/package.json
+++ b/package.json
@@ -4,57 +4,80 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -H 0.0.0.0",
-    "build": "ng build --env=prod",
-    "test": "ng test -sm=false",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "node local.js",
+    "build:browser:serverless": "ng build --prod --base-href /production/",
+    "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
+    "build:serverless:deploy": "npm run build:serverless && npm run deploy",
+    "deploy": "serverless deploy",
+    "build:server:serverless": "ng run jupiter-and-the-giraffe:server:serverless && webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@fakesamgregory/underscore-helpers": "0.0.1",
-    "angularfire2": "5.0.0-rc.3",
-    "angulartics2": "^2.5.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.0.0",
+    "@angular/router": "^6.1.10",
+    "@ng-toolkit/serverless": "^1.1.41",
+    "@ng-toolkit/universal": "^1.1.41-beta.110",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "angularfire2": "^5.0.2",
+    "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
+    "aws-serverless-express": "^3.2.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "codelyzer": "^4.5.0",
     "core-js": "^2.4.1",
-    "firebase": "^4.7.0",
-    "ng-recaptcha": "^3.0.5",
-    "nodemailer": "^4.3.1",
-    "rxjs": "^5.4.1",
+    "cors": "~2.8.4",
+    "cp-cli": "^1.1.0",
+    "firebase": "^5.5.4",
+    "grpc": "^1.15.1",
+    "jasmine": "^3.2.0",
+    "ng-recaptcha": "^4.0.0",
+    "rxjs": "^6.3.3",
+    "ts-loader": "4.2.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.7",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "@angular-devkit/build-angular": "^0.8.5",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
+    "@types/node": "^6.14.0",
+    "jasmine-core": "^3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
     "node-sass": "^4.5.3",
-    "protractor": "~5.1.2",
-    "puppeteer": "^1.7.0",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "opencollective": "^1.0.3",
+    "protractor": "^5.4.1",
+    "puppeteer": "^1.9.0",
+    "serverless": "^1.32.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "ts-loader": "4.2.0",
+    "ts-node": "^3.0.6",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
+    "webpack": "^4.20.2",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "resolutions": {
     "grpc": "^1.11.0"
