--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test
+      - test:
           filters:
             branches:
               ignore: master
