--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "webpack": "^4.20.2",
-    "webpack-cli": "2.1.2",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
   },
   "resolutions": {
