--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,12 @@ jobs:
           command: sudo pip install awscli
 
       - run:
+          name: Add robots TXT file
+          command: |
+            echo 'User-agent: *' >> ~/app/dist/browser/robots.txt
+            echo 'Disallow: /' >> ~/app/dist/browser/robots.txt
+
+      - run:
           name: AWS Sync
           command: aws --region eu-west-1 s3 sync ./dist/browser s3://dev.jupiterandthegiraffe.com/ --acl public-read --exact-timestamps --delete || return 1
 
