--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: sudo npm install
+          command: npm install
 
       - save_cache:
           paths:
@@ -44,7 +44,7 @@ jobs:
 
       - run:
           name: Install awscli
-          command: sudo pip install awscli
+          command: pip install awscli
 
       - run:
           name: Add robots TXT file
@@ -69,7 +69,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: sudo npm install
+          command: npm install
 
       - save_cache:
           paths:
@@ -78,7 +78,7 @@ jobs:
 
       - run:
           name: Install Serverless CLI and dependencies
-          command: sudo npm i -g serverless
+          command: npm i -g serverless
 
       - run:
           name: Deploy Severless
@@ -97,7 +97,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: sudo npm install
+          command: npm install
 
       - save_cache:
           paths:
