--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,10 @@ jobs:
           name: Deploy Severless
           command: npm run build:serverless:deploy
 
+      - run:
+          name: Invalidate code
+          command: aws cloudfront create-invalidation --distribution-id E24T90EA7EBZTQ --paths /*
+
   test:
     <<: *vm_settings
     steps:
