--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,7 @@
               "src/favicon.ico",
               "src/images",
               "src/json",
-              "src/sitemap.xml",
-              "src/share-image.jpg"
+              "src/sitemap.xml"
             ],
             "styles": [
               "src/assets/sass/main.scss"
