--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ vm_settings: &vm_settings
   working_directory: ~/app
   docker:
     - image: circleci/node:10.9.0-browsers
+  environment:
+    googleMapsApiKey: $GOOGLE_MAPS_API_KEY
 
 version: 2
 jobs:
@@ -24,6 +26,10 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run:
+          name: Replace Environment Variables
+          command: sed -i -e 's/${GOOGLE_MAPS_API_KEY}/$GOOGLE_MAPS_API_KEY/g' /src/environments/environment.ts
 
       - run:
           name: Build project
