--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,9 @@ jobs:
 
       - run:
           name: Replace Environment Variables
-          command: sed -i -e 's/${GOOGLE_MAPS_API_KEY}/$GOOGLE_MAPS_API_KEY/g' /src/environments/environment.ts
+          command: |
+            sed -i -e 's/${GOOGLE_MAPS_API_KEY}/$GOOGLE_MAPS_API_KEY/g' src/environments/environment.ts
+            cat src/environments/environment.ts
 
       - run:
           name: Build project
