--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ vm_settings: &vm_settings
   working_directory: ~/app
   docker:
     - image: circleci/node:10.9.0-browsers
+    environment:
+      googleMapsApiKey: $$GOOGLE_MAPS_API_KEY
 
 version: 2
 jobs:
@@ -28,7 +30,7 @@ jobs:
       - run:
           name: Replace Environment Variables
           command: |
-            sed -i -e 's/${GOOGLE_MAPS_API_KEY}/$GOOGLE_MAPS_API_KEY/g' src/environments/environment.ts
+            sed -i -e 's/${GOOGLE_MAPS_API_KEY}/$googleMapsApiKey/g' src/environments/environment.ts
             cat src/environments/environment.ts
 
       - run:
