--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ vm_settings: &vm_settings
   docker:
     - image: circleci/node:10.9.0-browsers
   environment:
-    googleMapsApiKey: $$GOOGLE_MAPS_API_KEY
+    googleMapsApiKey: GOOGLE_MAPS_API_KEY
 
 version: 2
 jobs:
