--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Replace Environment Variables
           command: |
-            sed -i -e 's/${GOOGLE_MAPS_API_KEY}/$GOOGLE_MAPS_API_KEY/g' src/environments/environment.ts
+            sed -i -e 's/$GOOGLE_MAPS_API_KEY/${GOOGLE_MAPS_API_KEY}/g' src/environments/environment.ts
             cat src/environments/environment.ts
 
       - run:
