--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - run:
           name: Replace Environment Variables
           command: |
+            echo $GOOGLE_MAPS_API_KEY
             sed -i -e 's/${GOOGLE_MAPS_API_KEY}/piss/g' src/environments/environment.ts
             cat src/environments/environment.ts
 
