--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,7 @@ jobs:
 
       - run:
           name: Replace Environment Variables
-          command: |
-            echo $GOOGLE_MAPS_API_KEY
-            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
-            cat src/environments/environment.ts
+          command: sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
 
       - run:
           name: Build project
@@ -86,6 +83,13 @@ jobs:
       - run:
           name: Install Serverless CLI and dependencies
           command: npm i serverless
+
+      - run:
+          name: Replace Environment Variables
+          command: |
+            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
+            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.serverless.ts
+            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.prod.ts
 
       - run:
           name: Deploy Severless
