replace all maps api

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,10 @@ jobs:
 
       - run:
           name: Replace Environment Variables
-          command: sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
+          command: |
+            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
+            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.serverless.ts
+            sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.prod.ts
 
       - run:
           name: Build project
