--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
     "aws-serverless-express": "^3.2.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.3.1",
     "codelyzer": "^4.5.0",
     "core-js": "^2.4.1",
     "cors": "~2.8.4",
@@ -69,7 +69,7 @@
     "node-sass": "^4.5.3",
     "opencollective": "^1.0.3",
     "protractor": "^5.4.1",
-    "puppeteer": "^1.9.0",
+    "puppeteer": "^1.19.0",
     "serverless": "^1.32.0",
     "serverless-apigw-binary": "^0.4.4",
     "ts-loader": "4.2.0",
