--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grpc": "^1.15.1",
     "jasmine": "^3.2.0",
     "ng-recaptcha": "^4.0.0",
+    "path": "^0.12.7",
     "rxjs": "^6.3.3",
     "ts-loader": "4.2.0",
     "zone.js": "^0.8.14"
