--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "opencollective": "^1.0.3",
     "protractor": "^5.4.1",
     "puppeteer": "^1.19.0",
-    "serverless": "^1.32.0",
+    "serverless": "^1.51.0",
     "serverless-apigw-binary": "^0.4.4",
     "ts-loader": "4.2.0",
     "ts-node": "^3.0.6",
@@ -82,6 +82,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "resolutions": {
-    "grpc": "^1.11.0"
+    "grpc": "^1.11.0",
+    "graceful-fs": "4.2.2"
   }
 }
