--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs10.x
   memorySize: 192
   timeout: 10
   stage: production
@@ -19,7 +19,6 @@ package:
    - firebug-lite/**
    - e2e/**
    - coverage/**
-   - functions/**
    - '!node_modules/aws-serverless-express/**'
    - '!node_modules/binary-case/**'
    - '!node_modules/type-is/**'
