--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "aos": "^2.3.3",
     "aws-serverless-express": "^3.2.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-scss": "^4.3.1",
     "cors": "~2.8.4",
     "cp-cli": "^1.1.0",
     "firebase": "^5.9.0",
