--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.7",
     "@angular/animations": "~8.2.5",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
@@ -28,8 +29,11 @@
     "@angular/forms": "~8.2.5",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/platform-server": "^8.2.6",
     "@angular/router": "~8.2.5",
     "@ng-toolkit/serverless": "^7.1.2",
+    "@ng-toolkit/universal": "^1.1.21",
+    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
     "angularfire2": "^5.0.2",
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
@@ -39,6 +43,7 @@
     "cors": "~2.8.4",
     "cp-cli": "^1.1.0",
     "firebase": "^5.9.0",
+    "ng-recaptcha": "^5.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
@@ -49,9 +54,9 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -68,6 +73,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
-    "webpack-cli": "2.1.2"
+    "webpack-cli": "^3.3.8"
   }
 }
