--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
           command: |
             sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
             sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.prod.ts
+            sed -i -e s/FIREBASE_API_KEY/$FIREBASE_API_KEY/g src/environments/environment.ts
+            sed -i -e s/FIREBASE_API_KEY/$FIREBASE_API_KEY/g src/environments/environment.prod.ts
 
       - run:
           name: Build project
@@ -43,7 +45,7 @@ jobs:
   deploy_dev:
     working_directory: ~/app
     docker:
-      - image: circleci/python:2.7
+      - image: circleci/python:latest
     steps:
       - attach_workspace:
           at: ~/app/dist
@@ -91,6 +93,8 @@ jobs:
           command: |
             sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.ts
             sed -i -e s/GOOGLE_MAPS_API_KEY/$GOOGLE_MAPS_API_KEY/g src/environments/environment.prod.ts
+            sed -i -e s/FIREBASE_API_KEY/$FIREBASE_API_KEY/g src/environments/environment.ts
+            sed -i -e s/FIREBASE_API_KEY/$FIREBASE_API_KEY/g src/environments/environment.prod.ts
 
       - run:
           name: Deploy Severless
