--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
       - run:
           name: Build project
-          command: npm run build
+          command: npm run build:browser:prod
 
       - persist_to_workspace:
           root: dist
