--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
       - run:
           name: Add robots TXT file
           command: |
+            rm ~/app/dist/jupiter-and-the-giraffe/robots.txt
             echo 'User-agent: *' >> ~/app/dist/jupiter-and-the-giraffe/robots.txt
             echo 'Disallow: /' >> ~/app/dist/jupiter-and-the-giraffe/robots.txt
 
