--- a/functions/package.json
+++ b/functions/package.json
@@ -2,13 +2,17 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase-admin": "~5.4.0",
-    "firebase-functions": "^0.8.1",
+    "firebase": "^7.6.1",
+    "firebase-admin": "^8.9.0",
+    "firebase-functions": "^3.3.0",
     "nodemailer": "^4.3.1",
     "nodemailer-mailgun-transport": "^1.4.0"
   },
   "resolutions": {
     "grpc": "^1.14.1"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
