--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,6 +136,25 @@ jobs:
 
       - run: npm run lint
 
+  deploy_firebase:
+    <<: *vm_settings
+    steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - v2-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v2-dependencies-
+
+      - run:
+          name: Install dependencies
+          command: npm install
+
+      - run:
+          name: 'Deploy Firebase'
+          command: firebase deploy --token "$FIREBASE_TOKEN"
+
 workflows:
   version: 2
   build_and_test:
@@ -192,7 +211,7 @@ workflows:
             branches:
               ignore: /.*/
 
-      - build_deploy_prod:
+      - deploy_firebase:
           requires:
             - hold
           filters:
@@ -200,7 +219,16 @@ workflows:
               only: /[0-9]+(\.[0-9]+)*/
             branches:
               ignore: /.*/
-      
+
+      - build_deploy_prod:
+          requires:
+            - deploy_firebase
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
+
       - invalidate_code:
           requires:
             - build_deploy_prod
