--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
 
       - run:
           name: 'Deploy Firebase'
-          command: firebase deploy --token "$FIREBASE_TOKEN"
+          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
 
 workflows:
   version: 2
@@ -222,7 +222,7 @@ workflows:
 
       - build_deploy_prod:
           requires:
-            - deploy_firebase
+            - hold
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
