--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,22 +68,8 @@ jobs:
   build_deploy_prod:
     <<: *vm_settings
     steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v2-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v2-dependencies-
-
-      - run:
-          name: Install dependencies
-          command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v2-dependencies-{{ checksum "package.json" }}
+      - attach_workspace:
+          at: ~/app
 
       - run:
           name: Install Serverless CLI and dependencies
@@ -127,7 +113,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: npm install
+          command: npm ci
 
       - save_cache:
           paths:
@@ -136,25 +122,16 @@ jobs:
 
       - run: npm run lint
 
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - .
+
   deploy_firebase:
     <<: *vm_settings
     steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v2-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v2-dependencies-
-
-      - run:
-          name: Install dependencies
-          command: npm ci
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v2-dependencies-{{ checksum "package.json" }}
+      - attach_workspace:
+          at: ~/app
 
       - run:
           name: List
@@ -164,7 +141,7 @@ jobs:
 
       - run:
           name: Deploy Firebase
-          command: ~/app/node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
 
 workflows:
   version: 2
